--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,9 @@
-@import 'navigation';
+@import 'navigation',
+		'parkSelection';
 
 body {
 	background-color: #EEEEEE;
+	#main{
+		padding-top: 5em;
+	}
 }
