parkSelected added to the statestate, bind function, ftw

--- a/styles/_parkSelection.scss
+++ b/styles/_parkSelection.scss
@@ -1,8 +1,13 @@
 @import 'variables';
 
 #selectList{
-	background-color: $baseTone;
-	color: white;
+	background-color: $boxNormal;
+	border: $border;
+	.listItem{
+		list-style-type: none;
+		padding-left: 0.25em;
+		border-bottom: $border;
+	}
 }
 #map{
 	background-color: blue;
