--- a/styles/main.sass.css
+++ b/styles/main.sass.css
@@ -20,13 +20,14 @@
 
 #selectList {
   background-color: #ECE9E6;
-  border: 0.25em solid #78695b; }
+  border: 0.25em solid #78695b;
+  min-height: 30em; }
   #selectList .listItem {
     list-style-type: none;
     padding-left: 0.25em;
     border-bottom: 0.25em solid #78695b; }
 
-#map {
+#map, #filter {
   background-color: #ECE9E6;
   border: 0.25em solid #78695b;
   height: 25em; }
