checks to see if thf there are any reservation conflicts

--- a/styles/_campsiteSelection.scss
+++ b/styles/_campsiteSelection.scss
@@ -15,3 +15,34 @@
 	border: $border;
 	height: 25em;
 }
+.Calendar {
+        border-collapse: collapse;
+        padding: 0;
+        margin: 4rem auto 0;
+    }
+ 
+    .Calendar th,
+    .Calendar td {
+        padding: 1rem;
+        text-align: center;
+    }
+ 
+    .Day:hover {
+        background: #eee;
+        color: #000;
+    }
+ 
+    .Day.today {
+        background: #666;
+        color: #fff;
+    }
+ 
+    .Day.selected {
+        background: #2980b9;
+        color: #fff;
+    }
+ 
+    .Day.other-month {
+        background: #fafafa;
+        color: #aaa;
+    }
