--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,12 +5,13 @@
 		'statusBar',
 		'campsiteDetail',
 		'home',
+		'confirmSelection',
 		'parkDetail';
 		
 
 body {
-	background-color: white;
+	background-color: #ECE9E6;
 	#main{
-		padding-top: 5em;
-	}
+		background-color:#ECE9E6;
+	}	
 }
