--- a/styles/_campsiteSelection.scss
+++ b/styles/_campsiteSelection.scss
@@ -1,48 +1,22 @@
 @import 'variables';
 
 #selectList{
-	background-color: $boxNormal;
 	border: $border;
-	min-height: 30em;
-	.listItem{
-		list-style-type: none;
-		padding-left: 0.25em;
-		border-bottom: $border;
-	}
+    min-height: 30em;
+    background-color: #A9A177;
+    .listCampType{
+        border-bottom: $border;
+        background-color: #fff;
+    }
 }
 #calendar{
 	background-color: $boxNormal;
 	border: $border;
 	height: 25em;
+    #calendarButton{
+    background-color:#6C3109;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    float:right;
 }
-.Calendar {
-        border-collapse: collapse;
-        padding: 0;
-        margin: 4rem auto 0;
-    }
- 
-    .Calendar th,
-    .Calendar td {
-        padding: 1rem;
-        text-align: center;
-    }
- 
-    .Day:hover {
-        background: #eee;
-        color: #000;
-    }
- 
-    .Day.today {
-        background: #666;
-        color: #fff;
-    }
- 
-    .Day.selected {
-        background: #2980b9;
-        color: #fff;
-    }
- 
-    .Day.other-month {
-        background: #fafafa;
-        color: #aaa;
-    }
+}
