--- a/styles/main.sass.css
+++ b/styles/main.sass.css
@@ -1,78 +1,75 @@
 @import url(materialize-css/dist/css/materialize.min.css);
 .nav-wrapper {
-  height: 65px;
-  padding: 5px 1em;
+  padding: 1em;
   background-color: #333333;
-  color: white; }
+  color: white;
+  height: 4em;
+  box-sizing: border-box; }
   .nav-wrapper .image-div {
-    height: 60px;
-    float: left; }
+    float: left;
+    height: 3em; }
     .nav-wrapper .image-div a span {
       color: white;
       text-decoration: none !important;
-      font-size: 2em; }
+      font-size: 2em;
+      margin-left: 2em; }
     .nav-wrapper .image-div img {
       height: 100%; }
   .nav-wrapper .user-dropdown {
-    float: right;
-    margin-top: 0.5em; }
+    float: right; }
     .nav-wrapper .user-dropdown img {
       border-radius: 50%; }
 
-#selectList {
-  background-color: #ECE9E6;
+.container {
+  width: 85%; }
+
+#selectParkList {
   border: 0.25em solid #78695b;
-  min-height: 30em; }
-  #selectList .listItem {
-    list-style-type: none;
-    padding-left: 0.25em;
+  min-height: 30em;
+  background-color: #A9A177; }
+  #selectParkList .listItem {
     border-bottom: 0.25em solid #78695b; }
 
-#map, #filter {
+#map {
   float: right;
   background-color: #ECE9E6;
   border: 0.25em solid #78695b;
   height: 25em; }
 
-#selectList {
-  background-color: #ECE9E6;
+#filterButton {
+  background-color: #6C3109;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  float: right; }
+
+#filterBox {
+  background-color: #A9A177;
+  padding: 0.5em;
   border: 0.25em solid #78695b;
-  min-height: 30em; }
-  #selectList .listItem {
-    list-style-type: none;
-    padding-left: 0.25em;
-    border-bottom: 0.25em solid #78695b; }
+  border-top: none; }
+  #filterBox #filter {
+    background-color: #FFFFFF; }
+
+.collapsible-header {
+  padding: 0.25em; }
+
+#selectList {
+  border: 0.25em solid #78695b;
+  min-height: 30em;
+  background-color: #A9A177; }
+  #selectList .listCampType {
+    border-bottom: 0.25em solid #78695b;
+    background-color: #fff; }
 
 #calendar {
   background-color: #ECE9E6;
   border: 0.25em solid #78695b;
   height: 25em; }
-
-.Calendar {
-  border-collapse: collapse;
-  padding: 0;
-  margin: 4rem auto 0; }
-
-.Calendar th,
-.Calendar td {
-  padding: 1rem;
-  text-align: center; }
-
-.Day:hover {
-  background: #eee;
-  color: #000; }
-
-.Day.today {
-  background: #666;
-  color: #fff; }
-
-.Day.selected {
-  background: #2980b9;
-  color: #fff; }
-
-.Day.other-month {
-  background: #fafafa;
-  color: #aaa; }
+  #calendar #calendarButton {
+    background-color: #6C3109;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    float: right; }
 
 #statusBar {
   height: 3em;
@@ -85,7 +82,6 @@
     color: white; }
 
 #campsiteDetail {
-  margin-left: 8%;
   padding: 1em;
   background-color: #ECE9E6;
   border: 0.25em solid #78695b;
@@ -93,28 +89,87 @@
   #campsiteDetail .closeIcon {
     float: right;
     font-size: 1em; }
+  #campsiteDetail #campsiteSelectButton {
+    background-color: #6C3109;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    float: right; }
 
 #homepage {
-  margin-left: 8%;
-  padding: 1em;
+  background-color: #78695b; }
+  #homepage #heroHeader {
+    width: 100%;
+    height: 10em;
+    padding: 2em;
+    background-color: #5E451C;
+    color: #D5D0C6;
+    margin: none; }
+  #homepage .icon-block {
+    background-color: #A9A177;
+    border-radius: 2%;
+    height: 18em;
+    padding: 1em; }
+    #homepage .icon-block .icon-color {
+      margin-top: none; }
+  #homepage #davis {
+    background: linear-gradient(rgba(75, 75, 75, 0.55), rgba(75, 75, 75, 0.55)), url(../images/davis-mountains.jpg) center center no-repeat;
+    width: 100%;
+    height: 40em;
+    background-size: cover; }
+    #homepage #davis #searchParkButton {
+      background-color: #A9A177;
+      color: black; }
+  #homepage #enchanted {
+    background: linear-gradient(rgba(75, 75, 75, 0.55), rgba(75, 75, 75, 0.55)), url(../images/Enchanted-Rock.jpg) center center no-repeat;
+    width: 100%;
+    height: 40em;
+    background-size: cover; }
+  #homepage #bracken {
+    background: linear-gradient(rgba(75, 75, 75, 0.55), rgba(75, 75, 75, 0.55)), url(../images/Bracken-ferns.jpg) center center no-repeat;
+    width: 100%;
+    height: 40em;
+    background-size: cover; }
+
+.box-shadow--2dp {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); }
+
+.box-shadow--6dp {
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.2); }
+
+#selectList {
   background-color: #ECE9E6;
   border: 0.25em solid #78695b;
-  border-top: none; }
-  #homepage .closeIcon {
-    float: right;
-    font-size: 1em; }
+  min-height: 30em; }
+  #selectList .listItem {
+    list-style-type: none;
+    padding-left: 0.25em;
+    border-bottom: 0.25em solid #78695b; }
+
+#tango {
+  background-color: #A9A177;
+  padding: 1em;
+  border: 0.25em solid #78695b; }
+  #tango #tangoCash {
+    background-color: #FFF; }
+    #tango #tangoCash .confirmationButton {
+      background-color: #6C3109;
+      float: right;
+      margin-left: 1em;
+      margin-bottom: 1.5em; }
 
 #parkDetail {
-  margin-left: 8%;
   padding: 1em;
-  background-color: #ECE9E6;
+  background-color: #FFF;
   border: 0.25em solid #78695b;
   border-top: none; }
   #parkDetail .closeIcon {
     float: right;
     font-size: 1em; }
+  #parkDetail .btn {
+    float: right;
+    background-color: #6C3109; }
 
 body {
-  background-color: white; }
+  background-color: #ECE9E6; }
   body #main {
-    padding-top: 5em; }
+    background-color: #ECE9E6; }
