added profile page, reservation table, corrected nav bar style

--- a/styles/_campsiteDetail.scss
+++ b/styles/_campsiteDetail.scss
@@ -11,7 +11,7 @@
 	}
 
 	#campsiteSelectButton{
-		background-color:#6C3109;
+		background-color:#1F8D73;
 		margin-top: 1em;
 		margin-bottom: 1em;
 		float:right;
