--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -5,7 +5,14 @@
 	// border: $border;
 	// border-left:none;
 	// border-right: none;
-
+	.heroButton{
+		margin-left: 2em;
+		background-color:#1F8D73;
+	}
+	.heroTitle{
+		font-family: willowregular;
+		color: white;
+	}
 	#heroHeader{
 		// font-family: willow;
 		width:100%;
@@ -18,7 +25,7 @@
 	.icon-block{
 		background-color:$topColor;
 		border-radius: 2%;
-		height: 18em;
+		height: 19em;
 		padding: 1em;
 
 		.icon-color{
@@ -33,10 +40,7 @@
 		width: 100%;
 		height:40em;
 		background-size:cover;
-		#searchParkButton{
-			background-color: $topColor;
-			color:black;
-		}
+
 	}
 	#enchanted{
 		background: linear-gradient(
@@ -47,13 +51,26 @@
 		height:40em;
 		background-size:cover;
 	}
+	.reserveHeader{
+		margin-top: 0.75em;
+		padding-top: 0.25em;
+		background-color:lighten($topColor,5%);
+		border-radius: 2%;
+	}
+
+	.reserveText{
+		background-color:$topColor;
+		border-radius: 2%;
+		padding: 1em;
+		margin-bottom: 1em;
+	}
 	#bracken{
 		background: linear-gradient(
 	    rgba(75, 75, 75, 0.55), 
 	    rgba(75, 75, 75, 0.55)
 	    ),url(../images/Bracken-ferns.jpg)center center no-repeat;
 	    width: 100%;
-		height:40em;
+	    height:40em;
 		background-size:cover;
 	}
 }
