--- a/styles/_parkSelection.scss
+++ b/styles/_parkSelection.scss
@@ -17,10 +17,10 @@
 	border: $border;
 	height: 25em;
 }
-#filterButton{
+.filterButton{
 	background-color:#6C3109;
-	margin-top: 1em;
-	margin-bottom: 1em;
+	margin: 1em;
+	margin-right: 0;
 	float:right;
 }
 #filterBox{
