--- a/styles/main.sass.css
+++ b/styles/main.sass.css
@@ -1,24 +1,32 @@
 @import url(materialize-css/dist/css/materialize.min.css);
-.nav-wrapper {
+nav .nav-wrapper {
   padding: 1em;
   background-color: #333333;
   color: white;
-  height: 4em;
-  box-sizing: border-box; }
-  .nav-wrapper .image-div {
+  overflow: hidden;
+  display: block;
+  height: auto; }
+  nav .nav-wrapper .image-div {
     float: left;
-    height: 3em; }
-    .nav-wrapper .image-div a span {
+    height: 4.5em; }
+    nav .nav-wrapper .image-div a span {
       color: white;
+      font-family: GillSans, Trebuchet, sans-serif;
       text-decoration: none !important;
-      font-size: 2em;
-      margin-left: 2em; }
-    .nav-wrapper .image-div img {
-      height: 100%; }
-  .nav-wrapper .user-dropdown {
+      font-size: 2.1em;
+      margin-left: 1em;
+      vertical-align: middle; }
+    nav .nav-wrapper .image-div img {
+      height: 100%;
+      vertical-align: middle; }
+  nav .nav-wrapper .user-dropdown {
     float: right; }
-    .nav-wrapper .user-dropdown img {
+    nav .nav-wrapper .user-dropdown img {
       border-radius: 50%; }
+  nav .nav-wrapper .heroButton {
+    float: right;
+    margin-left: 2em;
+    background-color: #A9A177; }
 
 .container {
   width: 85%; }
@@ -36,10 +44,10 @@
   border: 0.25em solid #78695b;
   height: 25em; }
 
-#filterButton {
+.filterButton {
   background-color: #6C3109;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin: 1em;
+  margin-right: 0;
   float: right; }
 
 #filterBox {
@@ -53,18 +61,25 @@
 .collapsible-header {
   padding: 0.25em; }
 
-#selectList {
+#campSelectList {
   border: 0.25em solid #78695b;
   min-height: 30em;
   background-color: #A9A177; }
-  #selectList .listCampType {
+  #campSelectList .listCampType {
     border-bottom: 0.25em solid #78695b;
     background-color: #fff; }
 
 #calendar {
-  background-color: #ECE9E6;
+  background-color: #A9A177;
   border: 0.25em solid #78695b;
-  height: 25em; }
+  padding: none; }
+  #calendar #calendarBox {
+    width: 100%;
+    background-color: #A9A177;
+    padding: 1em; }
+    #calendar #calendarBox #calendarInnerBox {
+      background-color: white;
+      padding: 1em; }
   #calendar #calendarButton {
     background-color: #6C3109;
     margin-top: 1em;
@@ -90,13 +105,19 @@
     float: right;
     font-size: 1em; }
   #campsiteDetail #campsiteSelectButton {
-    background-color: #6C3109;
+    background-color: #1F8D73;
     margin-top: 1em;
     margin-bottom: 1em;
     float: right; }
 
 #homepage {
   background-color: #78695b; }
+  #homepage .heroButton {
+    margin-left: 2em;
+    background-color: #1F8D73; }
+  #homepage .heroTitle {
+    font-family: willowregular;
+    color: white; }
   #homepage #heroHeader {
     width: 100%;
     height: 10em;
@@ -107,7 +128,7 @@
   #homepage .icon-block {
     background-color: #A9A177;
     border-radius: 2%;
-    height: 18em;
+    height: 19em;
     padding: 1em; }
     #homepage .icon-block .icon-color {
       margin-top: none; }
@@ -116,14 +137,21 @@
     width: 100%;
     height: 40em;
     background-size: cover; }
-    #homepage #davis #searchParkButton {
-      background-color: #A9A177;
-      color: black; }
   #homepage #enchanted {
     background: linear-gradient(rgba(75, 75, 75, 0.55), rgba(75, 75, 75, 0.55)), url(../images/Enchanted-Rock.jpg) center center no-repeat;
     width: 100%;
     height: 40em;
     background-size: cover; }
+  #homepage .reserveHeader {
+    margin-top: 0.75em;
+    padding-top: 0.25em;
+    background-color: #b3ac87;
+    border-radius: 2%; }
+  #homepage .reserveText {
+    background-color: #A9A177;
+    border-radius: 2%;
+    padding: 1em;
+    margin-bottom: 1em; }
   #homepage #bracken {
     background: linear-gradient(rgba(75, 75, 75, 0.55), rgba(75, 75, 75, 0.55)), url(../images/Bracken-ferns.jpg) center center no-repeat;
     width: 100%;
@@ -167,9 +195,41 @@
     font-size: 1em; }
   #parkDetail .btn {
     float: right;
-    background-color: #6C3109; }
+    background-color: #1F8D73; }
+
+@font-face {
+  font-family: 'willowregular';
+  src: url("./fonts/willow__-webfont.eot");
+  src: url("./fonts/willow__-webfont.eot?#iefix") format("embedded-opentype"), url("./fonts/willow__-webfont.woff2") format("woff2"), url("./fonts/willow__-webfont.woff") format("woff"), url("./fonts/willow__-webfont.ttf") format("truetype"), url("./fonts/willow__-webfont.svg#willowregular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
 
 body {
   background-color: #ECE9E6; }
   body #main {
+    min-height: 70em;
     background-color: #ECE9E6; }
+
+#footer {
+  font-size: 0.85em;
+  background-color: #EEE;
+  border-top: 4px solid #555;
+  margin: 0;
+  padding: 1em; }
+  #footer .header {
+    text-decoration: underline; }
+  #footer a {
+    text-decoration: none;
+    color: #665969; }
+    #footer a:hover {
+      color: #5EA4BF; }
+
+.banner {
+  font-family: willowregular;
+  margin-top: none;
+  height: 8em;
+  background-color: #5f430b;
+  padding: 1em;
+  margin-bottom: 5em; }
+  .banner h2 {
+    color: white; }
