--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,12 +6,56 @@
 		'campsiteDetail',
 		'home',
 		'confirmSelection',
+		'login',
 		'parkDetail';
+@font-face {
+    font-family: 'willowregular';
+    src: url('./fonts/willow__-webfont.eot');
+    src: url('./fonts/willow__-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/willow__-webfont.woff2') format('woff2'),
+         url('./fonts/willow__-webfont.woff') format('woff'),
+         url('./fonts/willow__-webfont.ttf') format('truetype'),
+         url('./fonts/willow__-webfont.svg#willowregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 		
 
 body {
+
 	background-color: #ECE9E6;
 	#main{
+		min-height: 70em;
 		background-color:#ECE9E6;
 	}	
+}
+#footer {
+	font-size: 0.85em;
+	background-color: #EEE;
+	border-top: 4px solid #555;
+	margin: 0;
+	padding: 1em;
+	.header{
+		text-decoration: underline;
+	}
+	a {
+		text-decoration: none;
+		color: #665969;
+		&:hover {
+			color: #5EA4BF;
+		}
+	}
+}
+
+.banner{
+	font-family:willowregular;
+	margin-top:none;
+	height: 8em;
+	background-color: lighten(#483308,5%);
+	padding: 1em;
+	margin-bottom: 5em;
+	h2{
+		color:white;
+	}
 }
