fixed col bugs, conintue to style selection screens

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -24,11 +24,8 @@ nav .nav-wrapper{
 			vertical-align: middle;
 		}
 	}
-	.user-dropdown{
-		float: right;
-		img{
-			border-radius: 50%;
-		}
+	#dropdown1{
+		margin-top:1em;
 	}
 	.heroButton{
 		float: right;
