--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,4 @@
-@import 'materialize-css/dist/css/materialize.min.css',
-		'navigation',
+@import 'navigation',
 		'parkSelection',
 		'campsiteSelection',
 		'statusBar',
