--- a/styles/_checkout.scss
+++ b/styles/_checkout.scss
@@ -15,3 +15,9 @@
 	border: $border;
 	height: 25em;
 }
+
+#calendarBox #calendarInnerBox .checkoutButton{
+	background-color:#007F62;
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
