--- a/styles/_parkSelection.scss
+++ b/styles/_parkSelection.scss
@@ -11,11 +11,17 @@
 		border-bottom: $border;
 	}
 }
+
+.map-row {
+	margin-bottom: 0;
+}
+
 #map{
 	float: right;
 	background-color: $boxNormal;
 	border: $border;
 	height: 25em;
+	width: 100%;
 }
 .filterButton{
 	background-color:#6C3109;
@@ -28,6 +34,7 @@
 	padding: 0.5em;
 	border: $border;
 	border-top:none;
+	overflow: hidden;
 	#filter{
 		background-color:#FFFFFF;
 	}
@@ -35,6 +42,6 @@
 .collapsible-header{
 	padding: 0.25em;
 }
-.collapsible-body{
-
+#selectParkList .collection-item:hover{
+	background-color: #DDD;
 }
