--- a/styles/main.sass.css
+++ b/styles/main.sass.css
@@ -1,4 +1,3 @@
-@import url(materialize-css/dist/css/materialize.min.css);
 nav .nav-wrapper {
   padding: 1em;
   background-color: #333333;
@@ -19,10 +18,8 @@ nav .nav-wrapper {
     nav .nav-wrapper .image-div img {
       height: 100%;
       vertical-align: middle; }
-  nav .nav-wrapper .user-dropdown {
-    float: right; }
-    nav .nav-wrapper .user-dropdown img {
-      border-radius: 50%; }
+  nav .nav-wrapper #dropdown1 {
+    margin-top: 1em; }
   nav .nav-wrapper .heroButton {
     float: right;
     margin-left: 2em;
@@ -38,11 +35,15 @@ nav .nav-wrapper {
   #selectParkList .listItem {
     border-bottom: 0.25em solid #78695b; }
 
+.map-row {
+  margin-bottom: 0; }
+
 #map {
   float: right;
   background-color: #ECE9E6;
   border: 0.25em solid #78695b;
-  height: 25em; }
+  height: 25em;
+  width: 100%; }
 
 .filterButton {
   background-color: #6C3109;
@@ -54,12 +55,16 @@ nav .nav-wrapper {
   background-color: #A9A177;
   padding: 0.5em;
   border: 0.25em solid #78695b;
-  border-top: none; }
+  border-top: none;
+  overflow: hidden; }
   #filterBox #filter {
     background-color: #FFFFFF; }
 
 .collapsible-header {
   padding: 0.25em; }
+
+#selectParkList .collection-item:hover {
+  background-color: #DDD; }
 
 #campSelectList {
   border: 0.25em solid #78695b;
@@ -85,6 +90,9 @@ nav .nav-wrapper {
     margin-top: 1em;
     margin-bottom: 1em;
     float: right; }
+
+#campSelectList .collection-item:hover {
+  background-color: #DDD; }
 
 #statusBar {
   height: 3em;
@@ -185,11 +193,18 @@ nav .nav-wrapper {
       margin-left: 1em;
       margin-bottom: 1.5em; }
 
+#mapBro {
+  float: right;
+  background-color: #ECE9E6;
+  border: 0.25em solid #78695b;
+  height: 25em; }
+
 #parkDetail {
   padding: 1em;
   background-color: #FFF;
   border: 0.25em solid #78695b;
-  border-top: none; }
+  border-top: none;
+  overflow: hidden; }
   #parkDetail .closeIcon {
     float: right;
     font-size: 1em; }
